Fix overflowing messages

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -505,8 +505,7 @@ main {
   font-size: 1.1rem;
   
   .message_text {
-    overflow-wrap: break-word;
-    word-wrap:break-word;
+    word-break: break-all;
   }
 
 
